[package]
name = "tls_testing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
colored = "2.0.0"
git2 = "0.19.0"
humantime = "2.1.0"
humantime-serde = "1.1.1"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.rustls-acme]
version = "0.11.1"
default-features = false
features = ["tokio","ring"]

[dependencies.serde]
version = "1.0.209"
features = ["derive"]

[dependencies.tokio]
version = "1.40.0"
features = ["full"]

[dependencies.tokio-stream]
version = "0.1.16"
features = ["net"]
